<resources>
    <string name="app_name">My Steps</string>
    <string name="loginpagelogo">LoginPageLogo</string>
    <string name="insert_email">Insira o seu email</string>
    <string name="insert_password">Insira a sua password</string>
    <string name="insertEmail">Insira o seu email</string>
    <string name="register_text">Ainda não possui uma conta?</string>
    <string name="loginbutton">LoginButton</string>
    <string name="entrar">Entrar</string>
    <string name="create_account">Criar uma nova conta</string>
    <string name="have_account">Já tem uma conta?</string>
    <string name="repeat_password">Repita a password</string>
    <string name="about">Sobre</string>
    <string name="account_settings">Definições de conta</string>
    <string name="logout">Logout</string>
</resources>
